<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_recipes">

    <fragment
        android:id="@+id/nav_recipes"
        android:name="com.example.cookbook.RecipesFragment"
        android:label="@string/menu_recipes"
        tools:layout="@layout/fragment_recipes" />
    <fragment
        android:id="@+id/nav_favorites"
        android:name="com.example.cookbook.FavoritesFragment"
        android:label="@string/menu_favorites"
        tools:layout="@layout/fragment_favorites" />
    <fragment
        android:id="@+id/nav_preparing"
        android:name="com.example.cookbook.PreparingFragment"
        android:label="@string/menu_preparing"
        tools:layout="@layout/fragment_preparing" />
    <fragment
        android:id="@+id/nav_timer"
        android:name="com.example.cookbook.TimerFragment"
        android:label="@string/menu_timer"
        tools:layout="@layout/fragment_timer" />
    <fragment
        android:id="@+id/nav_options"
        android:name="com.example.cookbook.OptionsFragment"
        android:label="@string/menu_options"
        tools:layout="@layout/fragment_options" />
    <fragment
        android:id="@+id/nav_categories"
        android:name="com.example.cookbook.CategoriesFragment"
        android:label="@string/categories"
        tools:layout="@layout/fragment_categories" />
    <fragment
        android:id="@+id/recipe"
        android:name="com.example.cookbook.RecipeFragment"
        android:label="Рецепт"
        tools:layout="@layout/fragment_recipe" />
    <fragment
        android:id="@+id/category"
        android:name="com.example.cookbook.CategoryFragment"
        android:label="@string/soups"
        tools:layout="@layout/fragment_category" />
    <fragment
        android:id="@+id/nav_neuron"
        android:name="com.example.cookbook.NeuronFragment"
        android:label="Определение ингредиентов"
        tools:layout="@layout/fragment_neuron" />

</navigation>