<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OptionsFragment"
    android:focusableInTouchMode="true">


    <TextView
        android:id="@+id/optionsTopText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="35dp"
        android:fontFamily="@font/arsenal"
        android:text="@string/account_options"
        android:textColor="@color/text_black"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_photo"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/optionsTopText"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView2"
        android:layout_marginStart="60dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/arsenal"
        android:text="@string/name"
        android:textColor="@color/top_text"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView2"
        android:layout_marginTop="24dp"
        android:layout_toRightOf="@+id/textView6"
        android:backgroundTint="@android:color/transparent"
        android:ems="8"
        android:enabled="false"
        android:fontFamily="@font/arsenal"
        android:inputType="textPersonName"
        android:maxHeight="14dp"
        android:selectAllOnFocus="true"
        android:text="@string/name_content"
        android:textColor="@color/text_black"
        android:textSize="18sp" />

    <ImageButton
        android:id="@+id/edit_name"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_below="@+id/imageView2"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_toRightOf="@+id/name"
        android:backgroundTint="@color/white"
        android:src="@drawable/ic_pencil" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView6"
        android:layout_marginStart="60dp"
        android:layout_marginTop="21dp"
        android:fontFamily="@font/arsenal"
        android:text="@string/email"
        android:textColor="@color/top_text"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"
        android:layout_marginTop="21dp"
        android:layout_toRightOf="@+id/textView8"
        android:backgroundTint="@android:color/transparent"
        android:ems="8"
        android:enabled="false"
        android:fontFamily="@font/arsenal"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        android:text="@string/email_content"
        android:textColor="@color/text_black"
        android:textSize="18sp" />

    <ImageButton
        android:id="@+id/edit_email"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_below="@+id/name"
        android:layout_marginStart="20dp"
        android:layout_marginTop="13dp"
        android:layout_toRightOf="@+id/email"
        android:backgroundTint="@color/white"
        android:src="@drawable/ic_pencil" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView8"
        android:layout_marginStart="60dp"
        android:layout_marginTop="21dp"
        android:fontFamily="@font/arsenal"
        android:text="@string/password"
        android:textColor="@color/top_text"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:layout_marginTop="21dp"
        android:layout_toRightOf="@+id/textView10"
        android:backgroundTint="@android:color/transparent"
        android:ems="5"
        android:enabled="false"
        android:fontFamily="@font/arsenal"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:text="@string/password_content"
        android:textColor="@color/text_black"
        android:textSize="18sp" />

    <ImageButton
        android:id="@+id/edit_password"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_below="@+id/email"
        android:layout_marginStart="20dp"
        android:layout_marginTop="13dp"
        android:layout_toRightOf="@+id/password"
        android:backgroundTint="@color/white"
        android:src="@drawable/ic_pencil" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="35dp"
        android:layout_below="@id/textView10"
        android:fontFamily="@font/arsenal"
        android:text="@string/app_options"
        android:textColor="@color/text_black"
        android:textSize="20sp" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView12"
        android:layout_marginStart="60dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/arsenal"
        android:text="@string/notifications"
        android:textColor="@color/top_text"
        android:textSize="18sp" />

</RelativeLayout>