<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="299dp"
    android:layout_height="155dp"
    android:layout_marginTop="23dp"
    android:layout_marginBottom="30dp"
    android:background="@drawable/menu_header"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/image_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="35dp"
        android:contentDescription="@string/nav_header"
        app:srcCompat="@drawable/ic_menu_logo" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/image_header"
        android:layout_alignTop="@+id/image_header"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/arsenal"
        android:text="@string/cook"
        android:textSize="36sp"
        android:textColor="@color/top_text"
        app:layout_constraintTop_toTopOf="@+id/image_header" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_alignStart="@+id/textView3"
        android:layout_marginStart="46dp"
        android:layout_marginTop="-18dp"
        android:fontFamily="@font/arsenal"
        android:text="@string/book"
        android:textColor="@color/top_text"
        android:textSize="36sp" />


</RelativeLayout>