<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:clipToPadding="false"
    android:clipChildren="false"
    android:padding="2dp"
    android:id="@+id/change_data_card">

    <androidx.cardview.widget.CardView
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:divider="@android:color/transparent"
        android:dividerHeight="0.0px"
        android:clipToPadding="false"
        android:clipChildren="false"
        app:cardElevation="1dp"
        app:cardPreventCornerOverlap="false"
        app:cardCornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:focusable="true"
            android:focusableInTouchMode="true">


            <TextView
                android:id="@+id/login_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/arsenal"
                android:text="@string/login"
                android:textColor="@color/top_text"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/login_name"
                android:layout_width="320dp"
                android:layout_height="48dp"
                android:layout_below="@id/login_title"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_style"
                android:hint="Имя пользователя"
                android:inputType="textEmailAddress"
                android:lines="1"
                android:padding="2dp"
                android:paddingStart="10dp"
                android:selectAllOnFocus="true"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/login_password"
                android:layout_width="320dp"
                android:layout_height="48dp"
                android:layout_below="@id/login_name"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:background="@drawable/edit_text_style"
                android:hint="Пароль"
                android:inputType="textPassword"
                android:lines="1"
                android:padding="2dp"
                android:paddingStart="10dp"
                android:selectAllOnFocus="true"
                android:textSize="20dp" />

            <CheckBox
                android:id="@+id/remember_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_password"
                android:layout_alignLeft="@id/login_password"
                android:fontFamily="@font/arsenal"
                android:text="@string/remember_me"
                android:textColor="@color/text_gray"
                android:textSize="18dp" />

            <Button
                android:id="@+id/enter"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/remember_me"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="17dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/arsenal"
                android:text="@string/enter"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="22dp" />

            <ImageButton
                android:id="@+id/close_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginTop="-8dp"
                android:layout_marginEnd="-8dp"
                android:backgroundTint="@color/white"
                app:srcCompat="@drawable/ic_cross" />

            <TextView
                android:id="@+id/question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/enter"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="-10dp"
                android:fontFamily="@font/arsenal"
                android:text="@string/do_you_have_account"
                android:textColor="@color/top_text"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/registration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/question"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/arsenal"
                android:text="@string/registration"
                android:textColor="@color/text_red"
                android:textSize="16sp" />
        </RelativeLayout>


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>